디자인 및 편의성 다듬기 작업
게시판 호출시 사이드바같이 호출
페이지버튼에 외곽선 삭제
게시물에서 수정, 삭제는 단축키 삭제
단축키는 최근 게시물 적용
인스타 방식이어도 seo 최적화
게시판 제목 매핑

--- a/src/main/resources/static/css/postList.css
+++ b/src/main/resources/static/css/postList.css
@@ -57,6 +57,12 @@
     color: #75f94c;
     border-color: #75f94c;
 }
+.sc-paging .btn-theme {
+    border: none;
+}
+.sc-write-button {
+    border: none;
+}
 /* 모바일 환경에서 특정 열만 숨김 */
 @media screen and (max-width: 600px) {
     body .col-lg-3, body .col-lg-9, body.col-xs-12 {
