--- a/src/main/resources/static/css/readPost.css
+++ b/src/main/resources/static/css/readPost.css
@@ -33,3 +33,8 @@
     max-width: 100%;
     height: auto !important;
 }
+#commentContent {
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    padding: 10px;
+}
