최신글, 댓글기능 오류 수정
자바스크립트 오류로 한번에 고장난 것 고침

--- a/src/main/resources/static/css/readPost.css
+++ b/src/main/resources/static/css/readPost.css
@@ -28,10 +28,12 @@
     font-family: inherit !important;
     font-weight: inherit !important;
     font-style: inherit !important;
+    max-width: 100%;
 }
 .post-content img {
-    max-width: 100%;
+    max-width: 100% !important;
     height: auto !important;
+    display: block;
 }
 #commentContent {
     background-color: transparent;
