--- a/src/main/webapp/WEB-INF/views/include/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/include/footer.jspf
@@ -40,7 +40,7 @@
                             <div class="sc-terminal__input-wrap">
                                 <span id="scTerminalMirror" class="sc-terminal__mirror" aria-hidden="true"></span>
                                 <span class="sc-terminal__cursor" aria-hidden="true"></span>
-                                <input id="scTerminalInput" class="sc-terminal__input" autocomplete="off" inputmode="text" placeholder="명령어 입력 (help / ask)" aria-label="터미널 입력">
+                                <input id="scTerminalInput" class="sc-terminal__input" autocomplete="off" inputmode="none" placeholder="명령어 입력 (help / ask)" aria-label="터미널 입력">
                             </div>
                         </div>
                     </div>
