--- a/src/main/webapp/WEB-INF/views/include/coupangAd.jspf
+++ b/src/main/webapp/WEB-INF/views/include/coupangAd.jspf
@@ -1,16 +1,15 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <div class="col-sm-12 ad-banners">
+    <a href="https://link.coupang.com/a/dkrkgt" target="_blank" referrerpolicy="unsafe-url"><img src="https://image6.coupangcdn.com/image/affiliate/banner/84ad900901dd88a88288a93e0caa41a7@2x.jpg" alt="스타크래프트 고스트: 노바, 제우미디어, 키스 R. A. 디캔디도 저/유미지 역" width="120" height="240"></a>
+    <a href="https://link.coupang.com/a/dkrgC5" target="_blank" referrerpolicy="unsafe-url"><img src="https://image10.coupangcdn.com/image/affiliate/banner/4cd277da736861a238abb6658d502d39@2x.jpg" alt="YOUTOOZ 스타크래프트 테란 마린 피규어, Terran" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/cogfUY" target="_blank" referrerpolicy="unsafe-url"><img src="https://image3.coupangcdn.com/image/affiliate/banner/6c0352d18229612456a4551e2f29e16a@2x.jpg" alt="스틸시리즈 Qck Large 게이밍 마우스 패드, 블랙, 1개" width="120" height="240"></a>
-    <a href="https://link.coupang.com/a/cogfvy" target="_blank" referrerpolicy="unsafe-url"><img src="https://image12.coupangcdn.com/image/affiliate/banner/fd58c078419b58eb0e18083b1aed15c4@2x.jpg" alt="로지텍 G102IC 2세대 LIGHTSYNC 게이밍 유선마우스, MU0054, 블랙" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/b4VXyV" target="_blank" referrerpolicy="unsafe-url"><img src="https://img5c.coupangcdn.com/image/affiliate/banner/333ee70db89e0afe904d85d4788c7aea@2x.jpg" alt="로지텍 PRO X SUPERLIGHT 게이밍 무선 마우스 MR0106, 블랙" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/cG0Db1" target="_blank" referrerpolicy="unsafe-url"><img src="https://img3c.coupangcdn.com/image/affiliate/banner/5cf307851b185061f9ca2ab8b0097b7b@2x.jpg" alt="레이저 Orochi V2 무선 마우스 RZ01-03730100-R3A1, RZ01-0373, 블랙" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/cG0DWV" target="_blank" referrerpolicy="unsafe-url"><img src="https://image2.coupangcdn.com/image/affiliate/banner/324109d66e0fd572e88a99337bd044e5@2x.jpg" alt="AULA 독거미 한글 오테뮤 저소음 피치축 V2 펀키스 기계식 유무선 키보드, 올리비아 화이트, F99" width="120" height="240"></a>
-    <a href="https://link.coupang.com/a/b5oHVC" target="_blank" referrerpolicy="unsafe-url"><img src="https://img1c.coupangcdn.com/image/affiliate/banner/1561e91509190d031d52b213d2fab86c@2x.jpg" alt="레오폴드 FC750RBT PD 화이트 투톤 한글 갈축" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/b4VXNW" target="_blank" referrerpolicy="unsafe-url"><img src="https://img1c.coupangcdn.com/image/affiliate/banner/1f6aa04ab0a6479bae7a907caeff1260@2x.jpg" alt="덱 프랑슘 거북선 블랙에디션 저소음 PBT 넌LED 유선 텐키리스 키보드, KBA-CBL-87XN, 저소음 적축" width="120" height="240"></a>
     <a href="https://link.coupang.com/a/bqU6LL" target="_blank" referrerpolicy="unsafe-url"><img src="https://image4.coupangcdn.com/image/affiliate/banner/b261a0b7064d9bf02050a4766eac60ad@2x.jpg" alt="빅트랙 베이직 게이밍 의자 A-01, 블랙 + 화이트" width="120" height="240"></a>
-    <a href="https://link.coupang.com/a/bQTfGB" target="_blank" referrerpolicy="unsafe-url"><img src="https://image9.coupangcdn.com/image/affiliate/banner/71e1b09d6b7a01f6decbdae2880a31f2@2x.jpg" alt="스타크래프트: 진화, 제우미디어, 티모시 잔" width="120" height="240"></a>
+    <a href="https://link.coupang.com/a/dkri1V" target="_blank" referrerpolicy="unsafe-url"><img src="https://image13.coupangcdn.com/image/affiliate/banner/9fed333aba21db3212a6594196e4a4ca@2x.jpg" alt="cilicili 스타크래프트 마우스패드 장패드 인테리어장식품 테란 저그 프로토스 50종, 3mm, 300x250mm, M, 1개" width="120" height="240"></a>
 </div>
 <div class="coupang-banner-text">
     <p>사이트 내 쿠팡 배너는 쿠팡 파트너스 활동의 일환으로, 이에 따른 일정액의 수수료를 제공받습니다.</p>
-    <p>기왕 쿠팡 쇼핑하실거라면 해당 링크 이용해서 쇼핑해주시면 사이트 운영에 큰 도움이 됩니다!</p>
 </div>
