게시판에 슬라이드 효과 안 넣어져서 패스..
이게 왜 안돼냐?

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -391,7 +391,7 @@ textarea.cke_source {
 .sc-title-cell {
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: clip;
     min-width: 0;
 }
 
@@ -400,7 +400,7 @@ textarea.cke_source {
     width: 100%;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: clip;
 }
 
 
@@ -410,7 +410,7 @@ textarea.cke_source {
     max-width: 100%;
     box-sizing: border-box;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: clip;
     white-space: nowrap;
     vertical-align: top;
     will-change: transform;
