--- a/src/main/resources/static/css/postList.css
+++ b/src/main/resources/static/css/postList.css
@@ -25,8 +25,23 @@
     max-width: 470px;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: clip;
 }
+.boardList .sc-title-cell {
+    text-overflow: clip;
+}
+
+.boardList .sc-title-clip,
+.boardList .sc-title-slide {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: clip;
+    padding-right: 0;
+}
+
 .writer, .date {
     text-align: center;
 }
